Tests/CompilerTests/negative/invalid-redeclaration.expected
negative/invalid-redeclaration.hylo:1.25-26: error: invalid redeclaration of 'x'
fun f(x: Void, y: Void, x: Void) {}
                        ^
negative/invalid-redeclaration.hylo:1.7-8: note: previous declaration here
fun f(x: Void, y: Void, x: Void) {}
      ^
negative/invalid-redeclaration.hylo:4.7-8: error: invalid redeclaration of 'x'
  let x = ()
      ^
negative/invalid-redeclaration.hylo:3.7-8: note: previous declaration here
fun g(x: Void) {
      ^
negative/invalid-redeclaration.hylo:6.7-8: error: invalid redeclaration of 'y'
  let y = ()
      ^
negative/invalid-redeclaration.hylo:5.7-8: note: previous declaration here
  let y = ()
      ^
